Hide unhide comment code.
